# binaryen_test

./: CMakeLists.txt  README.md  main.cpp  test.wat
.github/workflows/: cmake.yml
